--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,20 @@ dependencies {
 
   // Image Loading
   compile 'com.github.bumptech.glide:glide:4.3.1'
+
+  //Facebook Login
+  //Do not remove the "implementation" and "exclude" dependencies without matching the libs with our com.android.support version
+  implementation 'com.android.support:support-v4:26.1.0'
+  implementation 'com.android.support:cardview-v7:26.1.0'
+  implementation 'com.android.support:customtabs:26.1.0'
+  implementation 'com.android.support:support-annotations:26.1.0'
+  implementation 'com.android.support:support-core-utils:26.1.0'
+  implementation('com.facebook.android:facebook-android-sdk:4.28.0') {
+    exclude group: 'com.android.support', module: 'support-v4'
+    exclude group: 'com.android.support', module: 'appcompat-v7'
+    exclude group: 'com.android.support', module: 'cardview-v7'
+    exclude group: 'com.android.support', module: 'customtabs'
+    exclude group: 'com.android.support', module: 'support-annotations'
+    exclude group: 'com.android.support', module: 'support-core-utils'
+  }
 }
