[AAO-88] added happy path to social facebook login: added facebook authentication mode to retrofitaccountservice; created facebooksignupadapter, with all the logic of facebook sdk; added facebook login button to the loginFragment; added facebook navigation logic to the loginNavigator; added facebookLoginEvent handling to the LoginPresenter; added loading screen without username; unfinished tests for facebook happy path;

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ android {
     versionCode 1
     versionName "1.0"
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+    resValue "string", "facebook_app_id", "\"" + project.UPLOADER_FACEBOOK_APP_ID + "\""
+    resValue "string", "facebook_login_protocol_scheme", "\"" + project.UPLOADER_FACEBOOK_LOGIN_PROTOCOL_SCHEME + "\""
   }
   buildTypes {
     release {
@@ -30,7 +33,7 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
       signingConfig signingConfigs.release
     }
-    debug{
+    debug {
       minifyEnabled false
       applicationIdSuffix ".debug"
     }
